# cvs-radar

./: .dockerignore  .gitignore  CODEX_PROJECT_REVIEW.md  CONTEXT.md  CVS-Radar-PRD-v0.2.md  CVS_SENTIMENT_UPGRADE_REPORT.md  Dockerfile  README.md  app.py  app_pro.py  app_review.py  config.yaml  crawl_job.py  pyproject.toml  requirements.txt  run.py  scoring.py
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
cvs_radar/: __init__.py  api.py  api_auth.py  app_helpers.py  backfill.py  config.py  crawler.py  evaluation.py  filters.py  labeling.py  models.py  parser.py  pipeline.py  preference.py  reporting.py  sample_data.py  scoring.py  sentiment.py  service.py  store.py
data/: .gitignore  posts.jsonl  results.json
docs/: DECISIONS.md  codex_azz_brief.md  codex_ds1_brief.md  codex_e9d_j1g_brief.md  codex_eau_brief.md  codex_ij2_brief.md  codex_ij2_f46_brief.md  codex_ij2_output.md  codex_store_crawljob_brief.md  codex_tbi_brief.md  crawl_plan.md  improvement-plan-2026-07-20.md  labeling_guideline.md  ops-pipeline.md  runbook-data-recovery.md
legacy/: README.md
scripts/: audit_categories.py  backfill_reviews.py  check_data_freshness.py  export_llm_backfill.py  import_llm_backfill.py  prelabel.py  rebuild_review_excerpts.py  relabel_delta.py  strip_profiles.py  verify_extraction.py
tests/: test_api.py  test_backfill.py  test_core.py  test_data_freshness.py  test_labeling_evaluation.py  test_llm_backfill.py  test_publish_privacy.py  test_store.py  test_suspicion.py  test_web_build_data.py
web/: DESIGN.md  README.md  build_data.py  next.config.js  package-lock.json  (+3 more)
(+58 files in other folders)
