[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cvs-radar"
version = "0.1.0"
description = "PTT CVS product scoring pipeline"
requires-python = ">=3.12"

[project.optional-dependencies]
core = [
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
  "PyYAML==6.0.2",
]
api = [
  "fastapi==0.111.1",
  "uvicorn==0.30.6",
]
nlp-optional = [
  "SnowNLP==0.12.3",
  "openai==1.40.6",
]
legacy = ["streamlit>=1.41,<2"]
dev = [
  "httpx==0.27.0",
  "pytest==8.3.3",
  "ruff==0.6.9",
]

[tool.setuptools.packages.find]
include = ["cvs_radar*"]
